src/test/deca/context/valid/created/ops_arith/arith_ops.deca
// Description:
//    Programme utilisant les operateurs arithmetiques
//
// Resultats :
// 		OK
//
// Historique:
//    cree le 09/01/2020

{
	float x = -5;
	float y = 2;
	int a = 4;
	int b = 3;

	println("x = ", x);

	x  = ((3+2) * x * -1) / 25;
	println("x = ", x);

	x = a / 0;
	println("x = ", x);

	a = a % b;
	println("a = ", a);
}