src/test/deca/context/invalid/created/operation/all_op_INT.deca
// Description:
//    Test des operations sur entier. Echec division INT
//
//  Resultats:
//      Erreur contexte : Ligne 24 : Types don't match! 

//
// Historique:
//    cree le 09/01/2020

{

    int x = 0;
    int y;

    y = x;
    println("valeur 1 : ", y);

    y = x + 2;
    println("valeur 2 : ", y);

    y = y - 2;
    println("valeur 3 : ", y);

    y = y/2;
    println("valeur 4 : ", y);

    y = y*2;
    println("valeur 5 : ", y);

    y = y%2;
    println("valeur 6 : ", y);

}
